syntax = "proto3";

option csharp_namespace = "GrpcService";

package sample;

// The greeting service definition.
service Sample {
  // Sends a greeting
  rpc GetFullName (SampleRequest) returns (SampleReply);
}

// The request message containing the user's name.
message SampleRequest {
  string firstName = 1;
  string lastName=2;
}

// The response message containing the greetings.
message SampleReply {
  string fullName = 1;
}
